--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <script src="./ourscripts/gallery.js" defer></script>
     <script src="./ourscripts/items.js" defer></script>
-    <script src="./ourscripts/preventScroll.js" defer></script>
+    <!-- <script src="./ourscripts/preventScroll.js" defer></script> -->
     <!-- <script src="./ourscripts/test.js" defer></script> -->
     <script src="./ourscripts/nav.js" defer></script>
 
