--- a/index.html
+++ b/index.html
@@ -616,12 +616,10 @@ https://templatemo.com/tm-552-video-catalog
             <div class="row">
                 <!--Grid column-->
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-                <h5 class="text-uppercase">Footer Content</h5>
+                <h5 class="text-uppercase">Contact Us</h5>
         
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                    molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-                    voluptatem veniam, est atque cumque eum delectus sint!
+                    Our address is 5156 Mowry Ave, Fremont, CA 94555. We are open Tuesday - Sunday, from 11 AM to 7 PM. We hope you enjoyed our extensive catalog, and that you come in very soon. Thank you for visiting.
                 </p>
                 </div>
                 <!--Grid column-->
