major changes :boom:

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/templatemo-video-catalog.css">
-    <link rel="stylesheet" href="./ourcss/pages.css" type="text/css">
     <link rel="stylesheet" href="./ourcss/index.css" type="text/css">
     <link rel="stylesheet" href="./ourcss/top-page.css" type="text/css">
 
@@ -197,80 +196,71 @@ https://templatemo.com/tm-552-video-catalog
             </div>
         </div>
 
-        <div class="container-fluid" id="items">
-            <div id="content" class="mx-auto tm-content-container">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="tm-page-title mb-4" style="color: teal;">Our Video Catalog</h2>
-                        <div class="tm-categories-container mb-5">
-                            <h3 class="tm-text-primary tm-categories-text" style="color: teal;">Categories:</h3>
-                            <ul class="nav tm-category-list item-tab" id="item-links-div" style="color: teal;">
-                                <li class="nav-item tm-category-item item-links" style="cursor: pointer;" id="defaultOpenItem" onclick="itemSwitcher(event, 'all')">All</li>
-                                <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'on-sale-items')">Drone Shots</li>
-                                <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-3')">Nature</li>
-                                <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-4')">Actions</li>
-                                <li class="nav-item tm-category-item item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-5')">Featured</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="item-switcher-div" id="items">
+            <h2 class="tm-page-title">Our Products</h2>
+            <ul id="item-links-div">
+                <li class="item-links" style="cursor: pointer;" id="defaultOpenItem" onclick="itemSwitcher(event, 'all')">All</li>
+                <li class="item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'on-sale-items')">Drone Shots</li>
+                <li class="item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-3')">Nature</li>
+                <li class="item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-4')">Actions</li>
+                <li class="item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'page-5')">Featured</li>
+            </ul>
         </div> 
 
         <div class="item-content" id="all">
             <div class="item-content-row">
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale2.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img2.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale3.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img3.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
             </div>
             <div class="item-content-row">
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img5.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale2.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img6.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale3.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img7.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img8.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
             </div>
         </div>
         <div class="item-content" id="on-sale-items">
             <div class="item-content-row">
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img9.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale2.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img10.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale3.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img11.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img12.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
             </div>
             <div class="item-content-row">
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img13.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale2.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img14.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale3.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img15.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
                     <img src="gallery-imgs/onsale4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
