--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ https://templatemo.com/tm-552-video-catalog
         </div>
 
         <div class="item-switcher-div" id="items">
-            <h2 class="tm-page-title">Our Products</h2>
+            <h2 class="tm-page-title">OurItems</h2>
             <ul id="item-links-div">
                 <li class="item-links" style="cursor: pointer;" id="defaultOpenItem" onclick="itemSwitcher(event, 'all')">All</li>
                 <li class="item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'on-sale-items')">Drone Shots</li>
