added all the pics

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ https://templatemo.com/tm-552-video-catalog
         </div>
 
         <div class="item-switcher-div" id="items">
-            <h2 class="tm-page-title">OurItems</h2>
+            <h2 class="tm-page-title">Our Products</h2>
             <ul id="item-links-div">
                 <li class="item-links" style="cursor: pointer;" id="defaultOpenItem" onclick="itemSwitcher(event, 'all')">All</li>
                 <li class="item-links" style="cursor: pointer;" onclick="itemSwitcher(event, 'on-sale-items')">Drone Shots</li>
@@ -263,23 +263,23 @@ https://templatemo.com/tm-552-video-catalog
                     <img src="gallery-imgs/img15.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img16.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
             </div>
         </div>
         <div class="item-content" id="page-3">
             <div class="item-content-row">
                 <div class="col-sm tm-catalog-item">
+                    <img src="gallery-imgs/img17.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                </div>
+                <div class="col-sm tm-catalog-item">
+                    <img src="gallery-imgs/img18.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                </div>
+                <div class="col-sm tm-catalog-item">
+                    <img src="gallery-imgs/img19.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                </div>
+                <div class="col-sm tm-catalog-item">
                     <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
-                </div>
-                <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale2.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
-                </div>
-                <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale3.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
-                </div>
-                <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
             </div>
             <div class="item-content-row">
@@ -287,43 +287,43 @@ https://templatemo.com/tm-552-video-catalog
                     <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale2.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale3.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
             </div>
         </div>
         <div class="item-content" id="page-4">
             <div class="item-content-row">
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img25.jpeg" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale2.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img26.jpeg" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale3.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img27.jpeg" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img20.jpeg" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
             </div>
             <div class="item-content-row">
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale1.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img21.jpeg" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale2.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img22.jpeg" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale3.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img23.jpeg" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
                 <div class="col-sm tm-catalog-item">
-                    <img src="gallery-imgs/onsale4.png" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
+                    <img src="gallery-imgs/img24.jpeg" alt="Image" class="img-fluid tm-catalog-item-img item-img-size">
                 </div>
             </div>
         </div>
