--- a/index.html
+++ b/index.html
@@ -146,11 +146,15 @@ https://templatemo.com/tm-552-video-catalog
                 <div class="row mt-3 mb-5 pb-3">
                     <div class="col-12">
                         <div class="mx-auto tm-about-text-container px-3">
-                            <h2 class="tm-page-title mb-4 tm-text-primary" style="color: teal;">About the Video Catalog</h2>
-                            <p class="mb-4">Video Catalog is free HTML CSS template for your website. This Bootstrap v4.4.1 website template is 100% free download for everyone. You can modify and expand this template for your CMS websites. You can use it for commercial or non-commercial work. If you wish to support <a href="https://templatemo.com" class="tm-text-primary">TemplateMo</a>, please contact us.</p>
-                            <p class="mb-4">You are <u>not allowed</u> to re-distribute the template ZIP file on any template collection website.</p>
+                            <h2 class="tm-page-title mb-4 tm-text-primary" style="color: teal;">About Preet Fabrics</h2>
+                            <p class="mb-4">Founded in xxxx, Preet Fabrics is a local-owned Indian garments and accessories store. The store has been in operation for xx years and has faithfully served customers throughout Fremont and the Greater Bay Area. </p>
+                            <br>
+                            <p>Throughout our existence, we have remained committed to satisfying our customers with the best products from India. Therefore, our catalog features some of India's most beautiful garments, such as sarees, kurtas, and bangles. We also carry exquisite jewelry at reasonable costs, along with Indian-brand watches, stereo players, casettes, and kitchen appliances.  </p>
+                            <br>
+                            <p>If you are interested in our products, you can find our contact information on our website. Give us a call or come on in, and we will be glad to serve you! </p>
+                            <!-- <p class="mb-4">You are <u>not allowed</u> to re-distribute the template ZIP file on any template collection website.</p>
                             <p class="mb-4">Vivamus sit amet justo sed erat iaculis consequat. Nulla suscipit posuere lectus ut venenatis. Proin sed orci eget tellus euismod vulputate eu eu arcu. Etiam a bibendum lorem. Curabitur ac bibendum odio. Vivamus euismod dui mauris, ut tincidunt mi congue quis.</p>
-                            <p class="mb-0">Phasellus luctus orci dolor, a luctus massa tincidunt vitae. Integer sit amet odio id libero tincidunt dignissim in eget arcu. Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus tincidunt id. Cras duismod leo a urna placerat, vel blandit turpis fermentum.</p>
+                            <p class="mb-0">Phasellus luctus orci dolor, a luctus massa tincidunt vitae. Integer sit amet odio id libero tincidunt dignissim in eget arcu. Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus tincidunt id. Cras duismod leo a urna placerat, vel blandit turpis fermentum.</p> -->
                         </div>
                     </div>
                 </div>
