--- a/index.html
+++ b/index.html
@@ -405,13 +405,16 @@ https://templatemo.com/tm-552-video-catalog
                         <li>
                             <i class="fas fa-search-location" style="font-size: 10px;"></i> 
                             Address
-                            <p> 5156 Mowry Ave, Fremont, CA 94538</p>
+                            <p> 5156 Mowry Ave, Fremont, CA 94538
+                                <br>
+                                Find us <a target="_blank" href="https://www.google.com/maps/place/Preet+Fabrics/@37.5330645,-122.000788,17z/data=!3m2!4b1!5s0x808fbf5c1efbc451:0xa2821a71a1ef5259!4m5!3m4!1s0x808fbf5de1cda301:0x18f14998636275b3!8m2!3d37.5330603!4d-121.9985993" style="text-decoration: underline;">here</a>
+                            </p>
                         </li>
                     </ul>
                 </div>
 
                 <div class="col-lg-6 col-md-12 mb-4">
-                    <h6 class="text-uppercase">Links</h6>
+                    <h6 class="text-uppercase">Social Media</h6>
             
                     <ul class="list-unstyled mb-0 socials-div">
                         <li>
@@ -425,11 +428,13 @@ https://templatemo.com/tm-552-video-catalog
                         </li>
                     </ul>
                 </div>
+
             </div>
         </div>
-        <div class="text-center p-3" style="background-color: hsl(186, 50%, 24%)">
-            Copyright 2020 The Video Catalog Company - Designed by TemplateMo
-            
+
+        <div class="text-center pt-3 align-items-center" style=" background-color: hsl(186, 50%, 24%)">
+            <p class="mb-0" style="font-size: 1.24em; color: rgb(26, 23, 23);">Thank you for visiting!</p>
+            <p class="mb-0" style="font-size: 0.1em; color: hsl(186, 50%, 24%)">Copyright 2020 The Video Catalog Company - Designed by TemplateMo</p>
         </div>
     </footer>
 
