tried to fix the button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ https://templatemo.com/tm-552-video-catalog
             <h1 class="title-text">Preet Fabrics</h1>
         </div>
 
-        <form action="#about" onsubmit= event.preventDefault()">
+        <form action="#about" onsubmit="event.preventDefault()">
             <button type="button" class="btn discover-button">Discover</button>
         </form>
     </div>
