fixed the discover button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@ https://templatemo.com/tm-552-video-catalog
         <div class="title-text-div">
             <h1 class="title-text">Preet Fabrics</h1>
         </div>
-        <button class="btn discover-button">Discover</button>
+        <form action="#about">
+            <button class="btn discover-button">Discover</button>
+        </form>
     </div>
     <!-- <div class="tm-page-wrap mx-auto">
         <div class="position-relative">
