added meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Catalog</title>
+    <meta name="keywords" content="Preet Fabric Store, Preet Fabrics, Fabric Store, Preet, Indian Fabric, Indian">
+    <meta name="description" content="Fremont Fabric store with many different Indian products such as appliances, jewelry, and clothing">
+    <meta name="author" content="Preet Fabrics">
+    <meta name="page-topic" content="Fashion">
+    <meta name="page-type" content="Catalog">
+    <meta name="audience" content="Everyone">
+    <meta name="robots" content="index, follow">
+
+    <title>Preet Fabrics</title>
 
     <!-- https://fonts.google.com/ -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -55,9 +64,10 @@ https://templatemo.com/tm-552-video-catalog
         <div class="title-text-div">
             <h1 class="title-text">Preet Fabrics</h1>
         </div>
-        <form action="#about">
+        <!-- <form action="#about">
             <button class="btn discover-button">Discover</button>
-        </form>
+        </form> -->
+        <a class="btn discover-button" href="#about">Discover</a>
     </div>
     <!-- <div class="tm-page-wrap mx-auto">
         <div class="position-relative">
