--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cdccfc76af.js" defer crossorigin="anonymous"></script>
     
-    <link rel="icon" type="image/x-icon" href="https://preetfabricstore.netlify.app/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/templatemo-video-catalog.css">
